--- a/src/package.json
+++ b/src/package.json
@@ -2,6 +2,7 @@
 	"name":"TooDiff",
 	"main":"index.html",
 	"window":{
+		"icon": "icon.png",
 		// "frame":false,
 		"toolbar": false,
 		"width":900,
